gitops/overlays/uat1/ingresses-letters-maintenance.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: 32k # required for OAuth proxy
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    app.kubernetes.io/name: frontend
spec:
  ingressClassName: nginx
  rules:
    - host: cdcp-uat1.dev-dp.dts-stn.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  name: oauth-proxy
          - path: /.+/(letters|lettres)(/.+)?
            pathType: ImplementationSpecific
            backend:
              service:
                name: maintenance
                port:
                  name: http
    - host: cdcp-uat1.dev-dp-internal.dts-stn.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  name: application
          - path: /.+/(letters|lettres)(/.+)?
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend
                port:
                  name: oauth-proxy
