gitops/overlays/uat1/ingresses-maintenance.yaml
# This file defines ingress resources that effectively put the frontend application in "maintenance mode".
#
# To enable maintenance mode, reference this file in kustomization.yaml.
# This will route traffic to the maintenance and OAuth proxy services instead of the main application.
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  labels:
    app.kubernetes.io/name: frontend
spec:
  ingressClassName: nginx
  rules:
    - host: cdcp-uat1.dev-dp.dts-stn.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: maintenance
                port:
                  name: http

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-internal
  labels:
    app.kubernetes.io/name: frontend
spec:
  ingressClassName: nginx
  rules:
    - host: cdcp-uat1.dev-dp-internal.dts-stn.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  name: http
